--- a/paper.tex
+++ b/paper.tex
@@ -10,6 +10,8 @@
 % example work, you do not need to add them to your
 % source
 %
+% English language
+\usepackage[english]{babel}
 % Add the \Heart symbol
 \usepackage{marvosym}
 % Needed for dysplaying URLs
@@ -25,6 +27,8 @@
 % This is the custom command (defined in draft.tex above)
 % that adds a draft stamp on the PDF.
 \draft
+% Use \draft{long} to have the long format for the commit
+% info, i.e. date and time.
 
 \begin{document}
 
