--- a/paper.tex
+++ b/paper.tex
@@ -35,6 +35,7 @@
 \title{Git + LaTeX + gitinfo = {\Huge \Heart}}
 \subtitle{How to add a ``draft'' annotation to your papers. \\
 More at \href{https://balist.es/blog/2016/11/02/git-latex-gitinfo-draft-watermark/}{my blog}.}
+\author{Cristian Consonni}
 
 \maketitle
 
