Use relative sizes in draft.tex

--- a/imports/draft.tex
+++ b/imports/draft.tex
@@ -37,13 +37,13 @@
 
   \usepackage{background}
   \backgroundsetup{contents=\drafttext,
-           color=draftwatermarkcolor,
-           opacity=1,
-           angle=90,
-           position=current page.center,
-           vshift=-10,
-           hshift=200,
-           scale=2
-           }
+             color=draftwatermarkcolor,
+             opacity=1,
+             angle=90,
+             position=current page.west,
+             vshift=-0.5\leftmargin,
+             hshift=0.3\textheight,
+             scale=2
+  }
   \pagenumbering{arabic}
 }
