Use \oddsidemargin for vshift

--- a/imports/draft.tex
+++ b/imports/draft.tex
@@ -19,7 +19,7 @@
 \define@key{draft}{hshift}{\def\pb@hshift{#1}}
 \define@key{draft}{scale}{\def\pb@scale{#1}}
 % ========= KEY DEFAULTS =========
-\setkeys{draft}{position=current page.west,vshift=-0.5\leftmargin,hshift=0.3\textheight,scale=2}%
+\setkeys{draft}{position=current page.west,vshift=0.6\oddsidemargin,hshift=0.3\textheight,scale=2}%
 \newcommand{\draft}[2][]{%
   \global\toggletrue{isDraft}%
 
